// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer class _resolveAndRender renders with a specified template 1`] = `
"<html>
  <head>
    <title>Alt Template Page | Test Site</title>
  </head>
  <body class='alt-template'>
    <h1>Alt Template Page</h1>
    <div><h2>This page is using the alternative template.</h2>
<div><p>This is a page using the alternative template.</p>
</div>
</div>
  </body>
</html>
"
`;

exports[`Renderer class _resolveAndRender renders with a specified template in a subdirecoty 1`] = `
"<html>
  <head>
    <title>Subdirectory Alt Template Page | Test Site</title>
  </head>
  <body class='alt-template'>
    <h1>Subdirectory Alt Template Page</h1>
    <div><h2>This page is using the alternative template.</h2>
<div><p>This is a page using the alt template in a subdirectory.</p>
</div>
</div>
  </body>
</html>
"
`;

exports[`Renderer class _resolveAndRender renders with the default template in a subdirectory 1`] = `
"<html>
  <head>
    <title>Subdirectory Default Template Page | Test Site</title>
  </head>
  <body class='default'>
    <h1>Subdirectory Default Template Page</h1>
    <div><p>This is a page using the default template in a subdirectory.</p>
</div>
  </body>
</html>
"
`;

exports[`Renderer class _resolveAndRender renders with the root default template 1`] = `
"<html>
  <head>
    <title>Home | Test Site</title>
  </head>
  <body class='default'>
    <h1>Home</h1>
    <div><p>This is the homepage of Test Site.</p>
</div>
  </body>
</html>
"
`;

exports[`Renderer class _resolveAndRender renders with the root default template from a subdirectory 1`] = `
"<html>
  <head>
    <title>Sub Index Page | Test Site</title>
  </head>
  <body class='default'>
    <h1>Sub Index Page</h1>
    <div><p>This is an index page in a subdirectory.</p>
</div>
  </body>
</html>
"
`;

exports[`Renderer class registerTemplate adds templates to renderer.templates with slug as key 1`] = `
Object {
  "_": Object {
    "body": "<html>
  <head>
    <title>\${title} | \${siteName}</title>
  </head>
  <body class='<% print(typeof bodyClass !== \\"undefined\\" ? bodyClass : \\"default\\") %>'>
    <h1>\${title}</h1>
    <div>\${content}</div>
  </body>
</html>
",
    "dirname": "",
    "ext": "lodash",
    "metadata": Object {},
  },
  "_alt": Object {
    "body": "<h2>This page is using the alternative template.</h2>
<div>\${content}</div>
",
    "dirname": "",
    "ext": "lodash",
    "metadata": Object {
      "bodyClass": "alt-template",
    },
  },
  "alt/_": Object {
    "body": "<h2>This page is using the default template in a subdirectory.</h2>
<div>\${content}</div>
",
    "dirname": "alt",
    "ext": "lodash",
    "metadata": Object {
      "bodyClass": "subdirectory-default-template",
    },
  },
  "alt/_alt": Object {
    "body": "<h3>This page is using the alt template in a subdirectory.</h3>
<div>\${content}</div>
",
    "dirname": "alt",
    "ext": "lodash",
    "metadata": Object {
      "bodyClass": "subdirectory-alt-template",
    },
  },
}
`;
